--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,8 @@
 						</goals>
 						<configuration>
 							<sourceFile>target/${project.name}.jar</sourceFile>
-							<destinationFile>/home/theophobia/server/paper-1.18.2-318/plugins/${project.name}.jar</destinationFile>
+							<destinationFile>/home/theophobia/server/paper-1.18.2-318/plugins/${project.name}.jar
+							</destinationFile>
 						</configuration>
 					</execution>
 				</executions>
@@ -90,6 +91,7 @@
 			<id>papermc-repo</id>
 			<url>https://papermc.io/repo/repository/maven-public/</url>
 		</repository>
+
 		<repository>
 			<id>sonatype</id>
 			<url>https://oss.sonatype.org/content/groups/public/</url>
@@ -97,12 +99,6 @@
 	</repositories>
 
 	<dependencies>
-		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.8.8</version>
-		</dependency>
-
 		<dependency>
 			<groupId>io.papermc.paper</groupId>
 			<artifactId>paper-api</artifactId>
@@ -116,5 +112,34 @@
 			<version>0.7.2</version>
 			<scope>compile</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+			<version>0.9.9-RC1</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.8</version>
+			<scope>compile</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.seeseemelk</groupId>
+			<artifactId>MockBukkit-v1.18</artifactId>
+			<version>1.24.1</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 </project>
